Browse By Categories section added

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               
             <h2 class="font-normal text-2xl adlam md:text-4xl mt-12 mb-8 md:mt-28 md:mb-12  ">Browse By Categories</h2>
 
-            <section class="grid grid-cols-2 gap-3 md:flex md:flex-wrap ">
+            <section class="grid grid-cols-2 gap-3 md:flex md:flex-wrap justify-between ">
      
                 <div>
                     <div class="card bg-bg-color  md:w-48 shadow-xl md:p-8 space-y-3">
@@ -437,7 +437,7 @@
             <h2 class="font-normal text-2xl adlam md:text-4xl mt-12 mb-8 md:mt-28 md:mb-12  ">Our featured products</h2>
             <div>
                 <div class="flex flex-wrap gap-3">
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Cat ball.jpg"
@@ -460,7 +460,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Small dog dish.jpg"
@@ -483,7 +483,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Puzzle Toys.jpg"
@@ -506,7 +506,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Birds rings.jpg"
@@ -529,7 +529,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Sand shovel.jpg"
@@ -552,7 +552,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-secondary w-80 md:w-[415px] shadow-xl mb-2">
+                    <div class="card bg-secondary md:w-96 lg:w-[415px] shadow-xl mb-2">
                         <figure class="px-10 pt-10">
                           <img
                             src="image/Cat brush.jpg"
@@ -659,7 +659,7 @@
                         <p class="sora text-base md:text-xl font-normal">Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
             </nav>
             <nav>
-                <h6 class="footer-title">Find a pet</h6>
+                <h6 class="footer-title ">Find a pet</h6>
                 <a class="link link-hover">Breeds</a>
                 <a class="link link-hover">Contact us</a>
             </nav>
